# czip

./: .gitattributes  MANIFEST.in  README.md  pyproject.toml  setup.py  structure.xlsx
.eggs/setuptools_scm-9.2.2-py3.8.egg/EGG-INFO/: RECORD  requires.txt
.github/: python-publish.yml
.github/workflows/: publish.yml  python-publish.yml
ChunkZIP.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bmzip/: __init__.py  allc.py  ballc.py  bmz.py  utils.py  utils.pyx
bmzip/data/: structure.xlsx
bmzip/data/skypilot_template/: run_allc2mz.yaml
bmzip/data/snakemake_template/: run_allc2mz.smk
czip/: __init__.py  _version.py  allc.py  bcz.pyx  bmz.py  cz.py  cz_accel.c  cz_accel.pyx  test.py  utils.py
czip/data/skypilot_template/: run_allc2mz.yaml
czip/data/snakemake_template/: run_allc2mz.smk
data/: allc2mz.smk  extractCG.smk  illustration.xlsx  job.yaml  structure.xlsx
data/snakemake_template/: run_allc2mz.smk
docs/: README.md
docs/source/: benchmark.md  conf.py  czip.allc.rst  dnam.rst  index.rst
notebooks/: dnam.ipynb  python_api.ipynb  quick_start.ipynb  ref.cz  test1.bed  test1.cz  test2.cz
tests/: test_uint.py
